force-app/main/default/objects/ImmobilienDmsDatei__c/ImmobilienDmsDatei__c.object-meta.xml
<CustomObject>
    <label>Immobilien DMS Datei</label>
    <nameField>
        <label>Immobilien DMS Datei Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Immobilien DMS Dateien</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>