force-app/main/default/objects/ImmobilienDmsDatei__c/fields/DateiTyp__c.field-meta.xml
<CustomField>
    <fullName>DateiTyp__c</fullName>
    <label>Datei Typ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bilder</fullName>
            </value>
            <value>
                <fullName>Dokumente</fullName>
            </value>
            <value>
                <fullName>Highlights</fullName>
            </value>
            <value>
                <fullName>Grundrisse</fullName>
            </value>
            <value>
                <fullName>Baufortschritt</fullName>
            </value>
            <value>
                <fullName>Musterberechnung</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>