force-app/main/default/objects/ImmobilienDmsDatei__c/fields/DateiUrl__c.field-meta.xml
<CustomField>
    <fullName>DateiUrl__c</fullName>
    <label>Datei Url</label>
    <type>Url</type>
</CustomField>