force-app/main/default/objects/ImmobilienDmsDatei__c/fields/FileId__c.field-meta.xml
<CustomField>
    <fullName>FileId__c</fullName>
    <label>File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>