force-app/main/default/objects/ImmobilienDmsDatei__c/fields/FileLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FileLastModifiedDate__c</fullName>
    <label>Datei zuletzt geändert am</label>
    <type>DateTime</type>
</CustomField>