force-app/main/default/objects/ImmobilienDmsDatei__c/fields/FORMULA_TCD__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_TCD__c</fullName>
    <formula>TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Created Date</label>
    <type>Text</type>
</CustomField>