force-app/main/default/objects/ImmobilienDmsDatei__c/fields/MimeType__c.field-meta.xml
<CustomField>
    <fullName>MimeType__c</fullName>
    <label>Mime Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>