force-app/main/default/objects/ImmobilienDmsDatei__c/fields/ParentOrdner__c.field-meta.xml
<CustomField>
    <fullName>ParentOrdner__c</fullName>
    <label>Parent Ordner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>