force-app/main/default/objects/ImmobilienDmsDatei__c/fields/PreviewUrl__c.field-meta.xml
<CustomField>
    <fullName>PreviewUrl__c</fullName>
    <label>Preview Url</label>
    <type>Url</type>
</CustomField>