force-app/main/default/objects/ImmobilienDmsDatei__c/fields/ThumbnailUrl__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailUrl__c</fullName>
    <label>Thumbnail Url</label>
    <type>Url</type>
</CustomField>